--- a/popup.html
+++ b/popup.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>YouTube Audio Downloader</title>
-  <style>
-    body { width: 200px; padding: 10px; }
-    button { width: 100%; padding: 10px; }
-    #videoTitle {
-      margin-bottom: 10px;
-      font-weight: bold;
-      text-align: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>YouTube Audio Downloader</title>
+    <style>
+        body {
+            width: 200px;
+            padding: 10px;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+        }
+
+        #videoTitle {
+            margin-bottom: 10px;
+            font-weight: bold;
+            text-align: center;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
+
 <body>
-  <div id="videoTitle">Carregando título...</div>
-  <button id="downloadButton">Baixar Áudio</button>
-  <script src="popup.js"></script>
+    <div id="videoTitle">Carregando título...</div>
+    <button id="downloadButton">Baixar Áudio</button>
+    <script src="popup.js"></script>
 </body>
+
 </html>
